--- a/translations/iOS/Base.lproj/Localizable.strings
+++ b/translations/iOS/Base.lproj/Localizable.strings
@@ -1,4 +1,3 @@
-
 /* NEWAPPS-14684 - Message - Blocking user to delete car used in ongoing parking or EVC */
 "Alert.DeleteCarNotAllowedMessage" = "You are welcome to delete the vehicle as soon as the active parking or charging with it is over";
 "Label.BucketParking.ServiceFeeeMightApply" = "Service fee might apply at checkout";
@@ -7,6 +6,7 @@
 "Title.BucketParking.ParkingSummary" = "Parking summary";
 "Title.BucketParking.CancellationPolicy" = "Cancellation policy";
 
+/* can we see this comment in the translation tool? */
 "Label.BucketParking.StartTime" = "Start time";
 "Label.BucketParking.EndTime" = "End time";
 "Label.BucketParking.TicketType" = "Ticket Type";
